--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "swiper": "^11.2.10",
     "vue": "^3.5.13",
     "vue3-carousel": "^0.15.0"
   },
