--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue3-carousel": "^0.15.0"
   },
   "devDependencies": {
+    "@prettier/plugin-xml": "^3.4.2",
     "@vitejs/plugin-vue": "^5.2.1",
+    "prettier": "^3.6.2",
     "sass-embedded": "^1.86.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
