--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "swiper": "^11.2.10",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "vue3-carousel": "^0.15.0"
   },
   "devDependencies": {
